5127 TOGGLE DDOKGEN Legger til støtte for å sende brev til virksomhet (#1226)
Denne er bak toggle så kan prodsettes, men den fungerer ikke før dokgen også er ute.

* Legger til støtte for å sende brev til virksomhet

* Støtte for virksomhet i mulige-mottakere

* Setter GENERELT_FRITEKSTBREV_VITKSOMHET til prodsatt: Er gjemt under "journalføre på virksomhet"-toggelen uansett.

* bruker -> hovedpart for interne objekter. Gjorde Annen organisasjon om til egen konstant, og la til default feilmelding dersom hovedmottaker er noe annet enn det vi forventer.