@@ -3,7 +3,6 @@ package no.nav.melosys.tjenester.gui;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
@@ -13,6 +12,7 @@ import no.nav.melosys.domain.kodeverk.Sakstyper;
 import no.nav.melosys.domain.kodeverk.begrunnelser.Kontroll_begrunnelser;
 import no.nav.melosys.domain.kodeverk.behandlinger.Behandlingstyper;
 import no.nav.melosys.domain.kodeverk.brev.Produserbaredokumenter;
+import no.nav.melosys.exception.FunksjonellException;
 import no.nav.melosys.exception.TekniskException;
 import no.nav.melosys.service.behandling.BehandlingService;
 import no.nav.melosys.service.brev.BrevAdresse;
@@ -40,6 +40,8 @@ import static org.springframework.http.MediaType.APPLICATION_PDF_VALUE;
 @RequestScope
 public class BrevbestillingTjeneste {
     private static final String BRUKER_ELLER_BRUKERS_FULLMEKTIG = "Bruker eller brukers fullmektig";
+    private static final String VIRKSOMHET_TYPE = "Virksomhet";
+    private static final String ANNEN_ORGANISASJON = "Annen organisasjon";
     private static final String ARBEIDSGIVER_ELLER_ARBEIDSGIVERS_FULLMEKTIG = "Arbeidsgiver eller arbeidsgivers fullmektig";
 
     private final BrevbestillingService brevbestillingService;
@@ -102,7 +104,7 @@ public class BrevbestillingTjeneste {
                 return switch (p) {
                     case MELDING_FORVENTET_SAKSBEHANDLINGSTID_SOKNAD, MELDING_FORVENTET_SAKSBEHANDLINGSTID_KLAGE -> lagBrevMalDtoForForventetSaksbehandlingstid(p, hovedMottaker, behandlingId);
                     case MANGELBREV_BRUKER, MANGELBREV_ARBEIDSGIVER -> lagBrevMalDtoForMangelbrev(p, hovedMottaker, behandlingId);
-                    case GENERELT_FRITEKSTBREV_BRUKER, GENERELT_FRITEKSTBREV_ARBEIDSGIVER -> lagBrevMalDtoForFritekstbrev(p, hovedMottaker, behandlingId);
+                    case GENERELT_FRITEKSTBREV_BRUKER, GENERELT_FRITEKSTBREV_ARBEIDSGIVER, GENERELT_FRITEKSTBREV_VIRKSOMHET -> lagBrevMalDtoForFritekstbrev(p, hovedMottaker, behandlingId);
                     default -> null;
                 };
             })
@@ -197,22 +199,31 @@ public class BrevbestillingTjeneste {
     private List<MottakerDto> hentMottakereForBrev(Produserbaredokumenter produserbartdokument, Aktoersroller hovedMottaker, long behandlingId) {
         List<MottakerDto> mottakere = new ArrayList<>();
         var builder = new MottakerDto.Builder()
-            .medType(hovedMottaker == Aktoersroller.BRUKER ? BRUKER_ELLER_BRUKERS_FULLMEKTIG : ARBEIDSGIVER_ELLER_ARBEIDSGIVERS_FULLMEKTIG)
+            .medType(mapType(hovedMottaker))
             .medRolle(hovedMottaker);
 
         leggTilAdresseOgFeilmelding(builder, produserbartdokument, hovedMottaker, behandlingId);
 
         mottakere.add(builder.build());
-        if (hovedMottaker == Aktoersroller.ARBEIDSGIVER) {
+        if (hovedMottaker == Aktoersroller.ARBEIDSGIVER || hovedMottaker == Aktoersroller.VIRKSOMHET) {
             mottakere.add(
                 new MottakerDto.Builder()
-                    .medType("Annen organisasjon")
-                    .medRolle(hovedMottaker)
+                    .medType(ANNEN_ORGANISASJON)
+                    .medRolle(Aktoersroller.ARBEIDSGIVER)
                     .orgnrSettesAvSaksbehandler()
                     .build()
             );
         }
         return mottakere;
+    }
+
+    private String mapType(Aktoersroller hovedmottaker) {
+        return switch (hovedmottaker) {
+            case BRUKER -> BRUKER_ELLER_BRUKERS_FULLMEKTIG;
+            case VIRKSOMHET -> VIRKSOMHET_TYPE;
+            case ARBEIDSGIVER -> ARBEIDSGIVER_ELLER_ARBEIDSGIVERS_FULLMEKTIG;
+            default -> throw new FunksjonellException("Vi støtter ikke brev med hovedmottaker: " + hovedmottaker.getKode());
+        };
     }
 
     private FeltValgDto hentFritekstTittelValg(long behandlingId) {
@@ -243,7 +254,7 @@ public class BrevbestillingTjeneste {
             if (aktoersroller == Aktoersroller.BRUKER && brevAdresser.stream().allMatch(BrevAdresse::isAdresselinjerEmpty)) {
                 builder.medFeilmelding(Kontroll_begrunnelser.MANGLENDE_REGISTRERTE_ADRESSE.getBeskrivelse());
             } else {
-                builder.medAdresse(brevAdresser.stream().map(MottakerAdresseDto::av).collect(Collectors.toList()));
+                builder.medAdresse(brevAdresser.stream().map(MottakerAdresseDto::av).toList());
             }
         } catch (TekniskException e) {
             if ("Finner ikke arbeidsforholddokument".equals(e.getMessage())) {
